--- a/Boundary/assets/css/styles.css
+++ b/Boundary/assets/css/styles.css
@@ -2864,8 +2864,8 @@ textarea.form-control-lg {
 .btn:disabled, .btn.disabled, fieldset:disabled .btn {
   color: var(--bs-btn-disabled-color);
   pointer-events: none;
-  background-color: var(--bs-btn-disabled-bg);
-  border-color: var(--bs-btn-disabled-border-color);
+  background-color: #646970;
+  border-color: #646970;
   opacity: var(--bs-btn-disabled-opacity);
 }
 
